<resources>
    <string name="app_name">Notty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_et">Title…</string>
    <string name="note_field_et">Start typing your note here…</string>
    <string name="notUrgent_toggleButton">Not urgent</string>
    <string name="urgent_toggleButton">Urgent</string>
    <string name="veryUrgent_toggleButton">Very urgent</string>
    <string name="create_empty_note_error">An empty note was deleted</string>
    <string name="deleteNote_menuAction">Delete</string>
    <string name="createNote_toolbarTitle">Create note</string>
    <string name="editNote_toolbarTitle">Edit note</string>
    <string name="delete_all_menu_action">Delete all</string>
    <string name="tv_empty_state_1">OOPS...</string>
    <string name="tv_empty_state_2">Seems like there\'re no notes here yet!</string>
    <string name="ok_fab_description">\'OK\' button</string>
    <string name="ic_empty_state_description">Image telling there are no notes created</string>
    <string name="delete_all_alert_dialog">Do you really want to delete all notes?</string>
    <string name="delete_all_alert_confirmation">Delete all</string>
    <string name="delete_all_alert_cancellation">Cancel</string>
    <string name="all_notes_deleted_snackbar">All notes were deleted</string>
</resources>