<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createNote_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.CreateEditNoteFragment">

    <EditText
        android:id="@+id/noteTitle_Et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/title_et"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/noteContent_Et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Run errands!" />

    <EditText
        android:id="@+id/noteContent_Et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/note_field_et"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitle_Et"
        tools:text="Don't forget to run errands!" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteContent_Et"
        app:layout_constraintVertical_bias="0.0"
        app:singleSelection="true">

        <Button
            android:id="@+id/notUrgent_button"
            style="@style/AppTheme.urgencyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/notUrgent"
            android:text="@string/notUrgent_toggleButton" />

        <Button
            android:id="@+id/urgent_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/urgent"
            android:text="@string/urgent_toggleButton" />

        <Button
            android:id="@+id/very_Urgent_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/veryUrgent"
            android:text="@string/veryUrgent_toggleButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveNote_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_done_outline_24"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>